# nbm_to_zarr_data

./: .gitignore  CHANGES.md  README.md  README.original.md  SUMMARY.md
catalog/: catalog.json
data_summary/: README.md
nbm_to_zarr_clean/: LICENSE  SETUP.md  pyproject.toml
nbm_to_zarr_clean/.github/workflows/: update-data.yml
nbm_to_zarr_clean/scripts/: check_and_reset_dimensions.py  generate_catalog.py  list_grib_variables.py  test_download.py
nbm_to_zarr_clean/src/nbm_to_zarr/: __init__.py
nbm_to_zarr_clean/src/nbm_to_zarr/base/: dataset.py  region_job.py  template_config.py
nbm_to_zarr_clean/src/nbm_to_zarr/noaa/: __init__.py
nbm_to_zarr_clean/src/nbm_to_zarr/noaa/nbm_conus/forecast/: region_job.py
scripts/: cleanup_old_forecasts.py  create_summary.py  inspect_grib.py  test_basic.py  test_data_population.py
src/nbm_to_zarr/: __main__.py
src/nbm_to_zarr/base/: __init__.py
src/nbm_to_zarr/noaa/nbm_conus/: __init__.py
src/nbm_to_zarr/noaa/nbm_conus/forecast/: __init__.py  dataset.py  template_config.py
